force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneAreaCode__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>