force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneCountryCode__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>