force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneExtension__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneExtension__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Extension</label>
    <length>25</length>
    <type>Text</type>
</CustomField>