force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneNumber__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>