force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneSeqNo__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneSeqNo__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Seq No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>