force-app/main/default/objects/TempPassenger__c/fields/ropHomePhoneType__c.field-meta.xml
<CustomField>
    <fullName>ropHomePhoneType__c</fullName>
    <description>not in used</description>
    <label>ROP Home Phone Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>