force-app/main/default/objects/TempPassenger__c/fields/ropIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>ropIdentificationNumber__c</fullName>
    <description>not in used</description>
    <label>ROP Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>