force-app/main/default/objects/TempPassenger__c/fields/ropIncome__c.field-meta.xml
<CustomField>
    <fullName>ropIncome__c</fullName>
    <description>not in used</description>
    <label>ROP Income</label>
    <length>10</length>
    <type>Text</type>
</CustomField>