force-app/main/default/objects/TempPassenger__c/fields/ropMaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>ropMaritalStatus__c</fullName>
    <description>not in used</description>
    <label>ROP Marital Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>