force-app/main/default/objects/TempPassenger__c/fields/ropMileExpAmountQ1__c.field-meta.xml
<CustomField>
    <fullName>ropMileExpAmountQ1__c</fullName>
    <description>not in used</description>
    <label>ROP mile expiry amount quater 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>