force-app/main/default/objects/TempPassenger__c/fields/ropMileExpDateQ1__c.field-meta.xml
<CustomField>
    <fullName>ropMileExpDateQ1__c</fullName>
    <description>not in used</description>
    <label>ROP mile expiry date quater 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>