force-app/main/default/objects/TempPassenger__c/fields/ropMileExpDateQ2__c.field-meta.xml
<CustomField>
    <fullName>ropMileExpDateQ2__c</fullName>
    <description>not in used</description>
    <label>ROP mile expiry date Q2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>