force-app/main/default/objects/TempPassenger__c/fields/ropMileExpYearQ2__c.field-meta.xml
<CustomField>
    <fullName>ropMileExpYearQ2__c</fullName>
    <description>not in used</description>
    <label>ROP mile expiry year quater 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>