force-app/main/default/objects/TempPassenger__c/fields/ropOccupation__c.field-meta.xml
<CustomField>
    <fullName>ropOccupation__c</fullName>
    <description>not in used</description>
    <label>ROP Occupation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>