force-app/main/default/objects/TempPassenger__c/fields/ropPassportNumber__c.field-meta.xml
<CustomField>
    <fullName>ropPassportNumber__c</fullName>
    <description>not in used</description>
    <label>ROP Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>