force-app/main/default/objects/TempPassenger__c/fields/ropSPCCode__c.field-meta.xml
<CustomField>
    <fullName>ropSPCCode__c</fullName>
    <description>not in used</description>
    <label>ROP SPC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>