force-app/main/default/objects/TempPassenger__c/fields/ropStatus__c.field-meta.xml
<CustomField>
    <fullName>ropStatus__c</fullName>
    <description>not in used</description>
    <label>ROP Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>