force-app/main/default/objects/TempPassenger__c/fields/salutation__c.field-meta.xml
<CustomField>
    <fullName>salutation__c</fullName>
    <description>not in used</description>
    <label>Salutation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>