force-app/main/default/objects/TempPassenger__c/fields/segmentStatus__c.field-meta.xml
<CustomField>
    <fullName>segmentStatus__c</fullName>
    <description>not in used</description>
    <label>Segment Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>