force-app/main/default/objects/TempPassenger__c/fields/spml__c.field-meta.xml
<CustomField>
    <fullName>spml__c</fullName>
    <description>not in used</description>
    <label>SPML</label>
    <length>100</length>
    <type>Text</type>
</CustomField>