force-app/main/default/objects/TempPassenger__c/fields/suffix__c.field-meta.xml
<CustomField>
    <fullName>suffix__c</fullName>
    <description>not in used</description>
    <label>Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>