force-app/main/default/objects/TempPassenger__c/fields/wsKey__c.field-meta.xml
<CustomField>
    <fullName>wsKey__c</fullName>
    <description>not in used</description>
    <label>wsKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>